Fix alignments on pdp. (#52)
* Fix alignments on pdp.

* Fix see how linking to video section.

* Add video section back button.

--- a/src/styles/6.components/global/diffusers.scss
+++ b/src/styles/6.components/global/diffusers.scss
@@ -103,7 +103,10 @@
   &__btn-wrap {
     @include clearfix;
     position: relative;
-    max-width: 425px;
+
+    @include media-query($medium-down) {
+      max-width: 425px;
+    }
 
     &.hide {
       .diffusers__sub-btn {
